--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <header>
         <nav>
             <div class="gnb">
-                <a href="#">HOME</a>
-                <a href="#">PROFILE</a>
-                <a href="#">PROJECT-WEB</a>
+                <a href="#home">HOME</a>
+                <a href="#profile">PROFILE</a>
+                <a href="#project_web1">PROJECT-WEB</a>
                 <a href="#">PROJECT-Design</a>
             </div>
             <div class="sns">
@@ -112,20 +112,22 @@
         <setion id="project_web1">
             <h1>WEB : ReDesign { GentlMonster }</h1>
             <div class="project_info">
-                <p>젠틀몬스터 반응형 웹 제작(Desktop 1920, Tablet 1024, Mobile 480구성)<br>
-                    제작기간 : 40 시간<br>
-                    제작페이지 : index/login/board/product/map 총5페이지<br>
+                <p>젠틀몬스터 반응형 웹 제작(Desktop 1920, Tablet 1024, Mobile 480구성)
+                    제작기간 : 40 시간
+                    제작페이지 : index/login/board/product/map 총5페이지
                     사용 프로그램 : photoshop, illustrator, HTML5, CSS3, Javascript, php, gnuboard, git</p>
                 </div>
                 <div class="preview">
                     <img src="./images/preview_gm.jpg" alt="">
                 </div>
-            </setion>
             <div class="link">
-                <a href="#" target="_blank">최종 프로젝트 결과보기</a>
-                <a href="#">젠틀몬스터 기획서 보기</a>
-                <a href="#" target="_blank">와이어프레임/프로토타입 보기</a>
+                <a href="https://www.figma.com/file/wlDxfAlDalxsSCI0sJ2LBq/%EC%A0%A0%ED%8B%80%EB%AA%AC%EC%8A%A4%ED%84%B0
+                -2023?type=design&mode=design&t=p0AN1xvgtW9V9iZQ-1" target="_blank">와이어프레임/프로토타입 보기</a>
+                <a href="https://www.figma.com/proto/W3b9F2Xt58tQ4876frz8oJ/%EC%A0%A0%ED%8B%80%EB%AA%AC%EC%8A%A4%ED%84%B0
+                -2023-%EA%B2%B0%EA%B3%BC%EA%B8%B0%ED%9A%8D%EC%84%9C?type=design&t=cP39Xn8I89SH97cf-1&scaling=scale-down-width&page-id=0%3A1&node-id=37-3&mode=design" target="_blank">젠틀몬스터 기획서 보기</a>
+                <a href="http://eunjeong9.pe.kr/gentlemonster_project/" target="_blank">최종 프로젝트 결과보기</a>
             </div>
+            </setion>
     </main>
 </body>
 </html>
